syntax = "proto3";
package broler;

option go_package = "github.com/aavtic/broler/rpc/broler_grpc";


service Broler {
  rpc PageInfo(PagesInfoReq) returns (stream Pages) {}
  rpc ClientRequests(ClientReq) returns (ServerResponse) {}
}

message urlsDataType {
  repeated string allowedUrls = 1;
  repeated string disAllowedUrls = 2;
}

message PagesInfoReq {
  string url = 1;
  bool onlySearchDomain = 2;
  bool ignoreJSearch = 3;
  bool ignoreCSSearch = 4;
  urlsDataType urlsData = 5;
}

// {
//   "aavtic.dev": {
//     is_end: false
//     "styles.css": {is_end: true},
//     "projects/ass_parser": {is_end: false...}
//   },
// }

message Paths {
  bool is_end = 1;
  string is_processed = 2;
  map<string, Paths> paths = 3;
}

message Pages {
  map<string, Paths> root = 1;
}

message ClientReq {
  string method = 1;
  string request = 2;
}

message ServerResponse {
  string response = 1;
}
